# disBatch

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGES.md  DesignNotes.md  MANIFEST.in  Readme.md  dbMon.py  dbUtil.sh  disBatch  disBatch.py  disBatchShell.py  disBatcher.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi.yaml  tests.yaml
disbatch/: __init__.py  dbMon.py  dbUtil.sh  dbUtil.template.sh  disBatch.py  disBatch_cli.py
disbatch/kvsstcp/: .gitignore  Readme.md  __init__.py  kvsclient.py  kvscommon.py  kvsstcp.py
disbatchc/: dbMon.py  dbUtil.sh  disBatch.py
docs/: Makefile  conf.py  index.rst
docs/doctrees/: environment.pickle  index.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/html/_sources/: index.rst.txt
exampleTaskFiles/: 4KChecks  4KTasksRep  DBtasksOneBadOneLeaky  DCPTTasks  GPUTasks  WayTooLongTask  barrierCheckFail  dberTest.py  dberTest.submit  latePETask
test/: 4KChecks  4KTasksRep  4KTasksRep_disBatch_210812154901_299_dbUtil.sh  4KTasksRep_disBatch_210812155525_092_dbUtil.sh  4KTasksRep_disBatch_210812171639_797_dbUtil.sh  4KTasksRep_disBatch_210812171639_797_status.txt  4KTasksRep_disBatch_211208143114_283_dbUtil.sh  4KTasksRep_disBatch_211208143114_283_status.txt  README  dbTestZZZZZZZZZZ_dbUtil.sh  dbTest_dbUtil.sh  his.out  slurm-1086789.out  slurm-1086791.out  slurm_job_1098490_resize.csh  slurm_job_1098490_resize.sh  slurm_job_1098527_resize.csh  slurm_job_1098527_resize.sh  slurm_job_1202654_resize.csh  slurm_job_1202654_resize.sh  test.sh
test/tmp/: dbTestXXXXXXXXXXX_dbUtil.sh  dbTestXXXXXXXXXXX_status.txt  dbTestZZZZZZZZZZ_dbUtil.sh  dbTestZZZZZZZZZZ_kvsinfo.txt
test/util/: disb_util.py
tests/test_slurm/: Tasks  run.sh
tests/test_ssh/: Tasks_failfast  run.sh
