[project]
name = "disbatch"
description = "Dynamically distribute a list of tasks over a pool of compute resources"
readme = "Readme.md"
authors = [
    { name = "Nick Carriero" },
    { name = "Lehman Garrison", email = "lgarrison@flatironinstitute.org" },
]
requires-python = ">=3.9"
dependencies = []
license = { file = "LICENSE" }
dynamic = ["version"]

[project.scripts]
disBatch = "disbatch:main"
disbatch = "disbatch:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "disbatch/_version.py"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
]
